--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,8 +53,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Camera.cs" />
+     <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\ThirdPersonCameraController.cs" />
-     <Compile Include="Assets\Scripts\ThirdPersonController.cs" />
      <None Include="Assets\MonsterGroup1\TailedFox\readMe.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>E:/JuegosPlatzi/Puzzle/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
